--- a/style/main.css
+++ b/style/main.css
@@ -1,89 +1,135 @@
 :root{
-    --verde: #009e63;
-    --preto: #141414;
+    --verde:#6D9886;
+    --preto:#212121;
 }
 
 *{
-    margin: 0;
-    padding: 0;
+    margin:0;
+    padding:0;
     box-sizing: border-box;
 }
-/*Copo do projeto*/
+
+/*elementos base*/
 body{
-    background: var(--preto);
-    font-family: 'Times New Roman', Times, serif;
-    color: #fff;
+   background: var(--preto);
+   font-family: 'Arial', Times, serif;
+   color:white;
 }
 
+
 header .container{
-    display: flex;
+    display:flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    
 }
 
-header .Logo{
+header .logo{
     margin-left: 5px;
     color: var(--verde);
     font-family: 'Arial Black', Times;
-    font-size: 40px;
+    font-size:40px;
+    cursor: pointer;
 }
 
 header nav a{
-    text-decoration: none;
-    color: #aaa;
+    text-decoration:none;
+    color:#AAA;
     margin-right: 10px;
 }
 
+
 header nav a:hover{
-    color: #fff;
+    color:#fff;
 }
 
-/*Filme principal*/
+/*filme principal*/
 .filme-principal{
-    font-size: 16px;
-    background: linear-gradient(rgba(0,0,0,.50),rgba(0,0,0,.50)100%), url('/img/capa-dino.jpg');
+    font-size:16px;
+    background: linear-gradient(rgba(0,0,0,.50),rgba(0,0,0,.50)100%),  url('/img/capa-house.jpg');
 
-    height: 400px;
-    background-size: cover;
+    height:400px;
+    background-size:cover;
+ 
 
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-
 }
+
 
 .filme-principal .descricao{
     margin-top: 10px;
     margin-bottom: 40px;
 }
 
-.titulo{
-    margin-top: 13px;
-    font-size: 35px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+
+.filme-principal .titulo{
+    margin-top: 15%;
+    font-size: 40px;
+    font-family: 'Trebuchet MS', Arial, sans-serif;
 }
 
 .botao{
     background-color: rgba(0,0,0,.50);
-    border: none;
+    border:none;
     color: white;
 
-    padding: 12px 25px;
+    padding:15px 30px;
     margin-right: 15px;
     font-size: 12px;
-    
+
     cursor: pointer;
-    transition: .8s ease all;
+    transition: .3s ease all;
 }
 
 .botao:hover{
-    background-color: white;
-    color: black;
+    background-color:white;
+    color:black;
 }
 
 .botao i{
     margin-right: 8px;
 }
+
+
+.container{
+    margin-left: 20px;
+}
+
+.filme-principal .container{
+    width: 70%;
+}
+
+.box-filme{
+    height: 100%;
+    width: 100%;
+    display: block;
+    cursor: pointer;
+}
+
+
+.carrosel-filmes{
+    margin-top:5px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
